--- a/bachproef/conclusie.tex
+++ b/bachproef/conclusie.tex
@@ -14,9 +14,10 @@
 % Heeft het onderzoek geleid tot nieuwe vragen die uitnodigen tot verder 
 %onderzoek?
 
+In deze studie is een antwoord gezocht op de onderzoeksvraag 'Wat zijn de voordelen en beperkingen van het gebruik van 3D-interactie in e-commerce, vergeleken met traditionele 2D-interfaces?'. Hiervoor is een vergelijkende studie uitgevoerd tussen twee POC's, eenmaal gerealiseerd op een conventionele manier en nogmaals met elementen die 3D-interactie mogelijk maken.
 
-Bij de start van de tweede POC was er veel ambitie voor een volledig interactieve website te maken. Bij nader inzien bleek dit dus niet zo gemakkelijk te zijn. Alhoewel de theorie van Three.js niet uiterst moeilijk is, is de toepassing ervan echter zeer complex. Het verg
+Uit de vergelijkende studie kan besloten worden dat niet alles haalbaar is wanneer een developer ervoor kiest om Three.js te gebruiken. Het lijkt echter een optimale oplossing te zijn om een combinatie van beide benaderingen te gebruiken. De interactie die de 3D-elementen aan gebruikers bieden, is een uniek kenmerk dat een conventionele webshop kan verrijken.
 
-\begin{itemize}
-	\item Hoe beïnvloedt 3D-interactie de betrokkenheid en tevredenheid van gebruikers in een e-commerce context?
-\end{itemize}
+Een van de uitdagingen van Three.js is de leercurve, waarbij kennis over 3D-omgevingen en gerelateerde aspecten moet worden opgedaan. Na het voltooien van beide POC's kan worden geconcludeerd dat Three.js een aanzienlijke meerwaarde aanbiedt voor de kennis van een front-end ontwikkelaar. Voor ontwikkelaars die zich bezighouden met UI/UX opent het zo ook volledig nieuwe mogelijkheden die voorheen niet beschikbaar waren. De voordelen van Three.js overschaduwen de nadelen. In welke mate een ontwikkelaars Three.js kunnen implementeren in hun projecten hangt af van de business use case waarvoor de applicatie dient.
+
+Het grote voordeel van de implementatie van Three.js is de interactie die een gebruiker ervaart wanneer die zich op de website bevindt. Een van de vragen die in een verder onderzoek beantwoord kan worden, is hoe 3D-interactie de daadwerkelijke betrokkenheid en tevredenheid van gebruikers beïnvloed bij beide POC's, a.d.h.v. een steekproef. Door de resultaten te meten met UX metrics kan men een duidelijk beeld krijgen over de tijd die een gebruiker spendeert op de webshop en nog veel meer.
