--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -17,11 +17,10 @@ Gebruikers kunnen a.d.h.v. Three.js dus met meer interactie omgaan op het web. D
 \section{\IfLanguageName{dutch}{Onderzoeksvraag}{Research question}}%
 \label{sec:onderzoeksvraag}
 
-In dit onderzoek wordt een antwoord gezocht op de volgende vragen:
+In dit onderzoek wordt een antwoord gezocht op de volgende vraag:
 
 \begin{itemize}
-	\item[1.] Wat zijn de voordelen en beperkingen van het gebruik van 3D-interactie in e-commerce, vergeleken met traditionele 2D-interfaces?
-	
+	\item Wat zijn de voordelen en beperkingen van het gebruik van 3D-interactie in e-commerce, vergeleken met traditionele 2D-interfaces?
 \end{itemize}
 
 \section{\IfLanguageName{dutch}{Opzet van deze bachelorproef}{Structure of this bachelor thesis}}%
@@ -31,13 +30,13 @@ De rest van deze bachelorproef is als volgt opgebouwd:
 
 In Hoofdstuk~\ref{ch:stand-van-zaken} wordt een overzicht gegeven van de stand van zaken binnen het onderzoeksdomein, op basis van een literatuurstudie.
 
-In Hoofdstuk~\ref{ch:methodologie} wordt de methodologie toegelicht en worden de gebruikte onderzoekstechnieken besproken om een antwoord te kunnen formuleren op de onderzoeksvragen.
+In Hoofdstuk~\ref{ch:methodologie} wordt de methodologie toegelicht.
 
 
 % TODO: Vul hier aan voor je eigen hoofstukken, één of twee zinnen per hoofdstuk
 
-In Hoofdstuk~\ref{ch:proofofconceptConventioneel}, 
+In Hoofdstuk~\ref{ch:proofofconceptConventioneel} wordt de conventionele proof-of-concept verder uitgediept en worden de gebruikte onderzoekstechnieken besproken om een antwoord te kunnen formuleren op de onderzoeksvragen.
 
-In Hoofdstuk~\ref{ch:proofofconceptThreeJS}, 
+In Hoofdstuk~\ref{ch:proofofconceptThreeJS} wordt de Three.js-versie van de proof-of-concept uitgelegd, en worden nogmaals de onderzoekstechnieken besproken die zijn toegepast om de onderzoeksvragen te beantwoorden.
 
 In Hoofdstuk~\ref{ch:conclusie}, tenslotte, wordt de conclusie gegeven en een antwoord geformuleerd op de onderzoeksvragen. Daarbij wordt ook een aanzet gegeven voor toekomstig onderzoek binnen dit domein.
