--- a/bachproef/methodologie.tex
+++ b/bachproef/methodologie.tex
@@ -14,15 +14,13 @@
 
 In dit onderdeel wordt de onderzoeksaanpak besproken. Dit zal een overzicht voorleggen van de  nodige stappen die ondernomen worden om de POC's en vergelijkende studie te realiseren.
 
-Bij de start van het onderzoek wordt de eerste POC opgemaakt omdat hiervoor geen vereiste kennis nodig is over Three.js. Zo kan deze conventionele versie als een basis dienen voor de tweede POC. Beide POC's dienen zo identiek mogelijk te zijn waarbij het verschil ligt bij het implementeren van Three.js.
+Bij de start van het onderzoek wordt de eerste POC opgemaakt omdat hiervoor geen vereiste kennis nodig is over Three.js. Zo kan deze conventionele versie als een basis dienen voor de tweede POC. Beide POC's dienen zo identiek mogelijk te zijn waarbij het verschil ligt bij de implementatie van Three.js.
 
-Het concept voor beide webshops is een online vinyl winkel, hierbij zal gebruik gemaakt worden van de Spotify API. Deze API zal voornamelijk benut worden om mockdata te voorzien. De keuze voor een vinyl webwinkel is omdat de 3D modellen die zullen gebruikt worden relatief simpel zijn.
-
-De vergelijkende studie zal afgelegd worden m.b.v. UX metrics. Deze geven ons concrete metingen...
+Het concept voor beide webshops is een online vinyl winkel, hierbij zal gebruik gemaakt worden van de Spotify API. Deze API zal voornamelijk benut worden om mockdata te voorzien. De keuze voor een vinyl webwinkel is omdat de 3D modellen die gebruikt zullen worden relatief simpel zijn.
 
 \section{Mock-ups}
 
-Alvorens er een lijn code geschreven wordt zijn er mock-ups gemaakt voor de mobiele versie \ref{fig:mobileMockUps} en de desktop versie, beide voor de Home Pagina \ref{fig:desktopHomeMockUp} en de Detail Pagina \ref{fig:desktopDetailMockUp}. Zoals eerder vermeld dienen de mock-ups als een basis voor de conventionele versie van de webshop om een goede UX/UI te voorzien.
+Alvorens er een lijn code geschreven wordt zijn er mock-ups gemaakt voor de mobiele versie \ref{fig:mobileMockUps} en de desktop versie, beide voor de Home Pagina \ref{fig:desktopHomeMockUp} en de Detail Pagina \ref{fig:desktopDetailMockUp}. Zoals eerder vermeldt dienen de mock-ups als een basis voor de conventionele versie van de webshop om een goede UX/UI te voorzien.
 
 \begin{figure}
 	\centering
@@ -59,8 +57,10 @@ Voor een goede flow te voorzien zijn een aantal user stories opgemaakt voor het 
 	\item Als Klant wil ik gedetailleerde informatie kunnen zien over elke release zodat ik een geïnformeerde beslissing kan maken of ik de release al dan niet zal kopen.
 \end{itemize}
 
-Om een degelijke webshop te realiseren worden eerst mockups gemaakt a.d.h.v. Figma. De reden hiervoor is omdat een goede UX/UI nodig is voor beide POC's. De inhoud en opbouw van deze POC wordt uitgebreid uitgelegd in volgend hoofdstuk~\ref{ch:proofofconceptConventioneel}
+Om een degelijke webshop te realiseren worden de mock-ups als basis gebruikt. De reden hiervoor is omdat een goede UX/UI nodig is voor beide POC's. De inhoud en opbouw van deze POC wordt uitgebreid uitgelegd in volgend hoofdstuk~\ref{ch:proofofconceptConventioneel}
 
 \section{Proof-of-concept: Three.js}
 
 De POC die gebruik maakt van Three.js zal dus beginnen vanaf een kopie van de conventionele POC. Hierbij zullen een aantal aanpassingen gemaakt worden aan de webshop die van de technologie gebruik maken. Er wordt geprobeerd om zo dicht mogelijk te blijven bij de conventionele POC om een correcte vergelijkende studie uit te voeren.
+
+De inhoud en opbouw van deze POC wordt uitgebreid uitgelegd in volgend hoofdstuk~\ref{ch:proofofconceptThreeJS}
