--- a/bachproef/samenvatting.tex
+++ b/bachproef/samenvatting.tex
@@ -45,4 +45,14 @@
 
 \chapter*{\IfLanguageName{dutch}{Samenvatting}{Abstract}}
 
-\lipsum[1-4]
+Deze scriptie onderzoekt de impact van 3D-interactie op e-commerce in vergelijking met traditionele 2D-interfaces. Het hoofddoel is om webontwikkelaars een dieper inzicht te geven in de potentiële meerwaarde van het implementeren van 3D-elementen in hun webapplicaties.
+
+De aanleiding voor dit onderzoek is de groeiende populariteit van 3D-elementen in webprojecten, mede dankzij de voortdurende ontwikkeling van computers en browsers. Het onderzoek beoogt met name ontwikkelaars beter te informeren over de toegevoegde waarde en de leercurve met betrekking tot het leren en toepassen van het Three.js-framework in e-commerce.
+
+Voor dit onderzoek, is er een vergelijkende studie uitgevoerd waarbij twee proof-of-concept projecten ontwikkeld zijn. Het ene project maakte gebruik van traditionele 2D-interfaces, terwijl het andere project op basis van het eerste 3D-interactie implementeerde. Beide projecten waren gericht op een e-commerce omgeving. Hiervoor zijn verscheidene aspecten zijn geanalyseerd zoals gebruikerservaring, interactiemogelijkheden en de leercurve voor ontwikkelaars.
+
+De resultaten wijzen uit dat het gebruik van 3D-interactie in e-commerce verschillende voordelen met zich meebrengt, zoals verbeterde gebruikersinteractie en unieke visuele ervaringen. Hoewel het leren van Three.js een leerproces is voor ontwikkelaars, kan het toevoegen van 3D-elementen aanzienlijke meerwaarde bieden aan webapplicaties.
+
+Deze bevindingen zijn relevant voor professionals in het werkveld, omdat ze front-end ontwikkelaars inzicht geven in het potentieel van het implementeren van 3D-interactie in e-commerce. Het kan hen helpen bij het nemen van een beslissing tijdens het ontwerpen en ontwikkelen van een webapplicatie, met nadruk op het creëren van een verbeterde gebruikerservaring en zich onderscheiden van de concurrentie.
+
+Concluderend kan worden gesteld dat het implementeren van 3D-interactie in e-commerce een waardevolle strategie is. Het is echter belangrijk om rekening te houden met de leercurve voor ontwikkelaars en mogelijke beperkingen. Aanbevelingen voor toekomstig onderzoek zijn onder andere het verkennen van andere frameworks en technologieën voor 3D-interactie, en het evalueren van de langetermijneffecten op gebruikersbetrokkenheid en bedrijfsresultaten in de context van e-commerce.
