--- a/bachproef/voorwoord.tex
+++ b/bachproef/voorwoord.tex
@@ -11,4 +11,11 @@
 %% waarom jij het onderwerp wil bespreken.
 %% Vergeet ook niet te bedanken wie je geholpen/gesteund/... heeft
 
-\lipsum[1-2]
+In het kader van het voltooien van de opleiding Toegepaste Informatica, afstudeerrichting Mobile en Enterprise Development, werd deze bachelorproef geschreven. Dit onderzoek is geschreven vanuit een persoonlijke interesse in 3D technologieën en hoe deze kunnen geïmplementeerd worden in een webomgeving. Vooraleer te starten aan het onderzoek had ik al 10 lessen afgelegd van de Three.js journey cursus. Doorheen het afleggen van deze lessen kwam echter de vraag naar boven of het effectief een voordeel is voor developers om deze technologie als vaardigheid op te doen. Met behulp van deze bachelorproef probeerde ik dus een duidelijk beeld te geven over de voordelen en beperkingen tussen een conventionele webshop en een webshop die gebruik maakt van Three.js.
+\newline
+\newline
+Als eerste wens ik mijn co-promotor, Kenzo Dewaegenaere te bedanken voor zijn technische input, suggesties voor deze scriptie en me de goeie richting uit te sturen.
+\newline
+\newline
+En tenslotte wens mijn promotor Tom Antjon te bedanken voor de feedback over de scriptie. Ten alle tijde kon ik bij hem terecht voor begeleiding en vragen voor de bachelorproef.
+
