--- a/bachproef/SchrursRubenBP.tex
+++ b/bachproef/SchrursRubenBP.tex
@@ -77,7 +77,7 @@
 \supervisor{Dhr. T. Antjon}
 \cosupervisor{Dhr. K. Dewaegenaere }
 \title%
-    {Ontdekken van de voordelen en beperkingen bij de implementatie van 3D-interactie in e-commerce: Een vergelijkende studie en proof-of-concept.}
+    {Ontdekken van de voordelen en\newline beperkingen bij de implementatie van 3D-interactie in e-commerce: Een vergelijkende studie en proof-of-concept}
 \academicyear{\advance\year by -1 \the\year--\advance\year by 1 \the\year}
 \examperiod{2}
 \degreesought{\IfLanguageName{dutch}{Professionele bachelor in de toegepaste informatica}{Bachelor of applied computer science}}
