--- a/bachproef/SchrursRubenBP.tex
+++ b/bachproef/SchrursRubenBP.tex
@@ -71,6 +71,10 @@
 	tabsize=3
 }
 
+\usepackage[titles]{tocloft}
+\setlength{\cftfignumwidth}{3em}
+
+
 %%---------- Document metadata -------------------------------------------------
 % TODO: Replace this with your own information
 \author{Ruben Schrurs}
